french new Leçon

--- a/french/french.org
+++ b/french/french.org
@@ -754,7 +754,7 @@ total 17pt
 
 
 
-* Leçon 24: Voyelles Composées
+** Leçon 24: Voyelles Composées
 Activité 1:
 
 - an
@@ -794,7 +794,7 @@ kjadf
 7. anthropologie  =science of life= =នរវិជ្ជា=
 8. annulation  =cancelation=
 
-* Séance 25
+** Séance 25
 
 - Tu aimes le sports?
 - J'aime le faire du vélo.
@@ -836,7 +836,7 @@ Activité
 7. ancienneté   =ភាពចំណាស់=
 8. violemment   =ដោយហិង្សា=
 
-* Séance 26
+** Séance 26
 Activité: À l'aide des dessins proposés, lisez et complétez les mots
 avec les voyelles composées 
 1. pomme
@@ -870,3 +870,393 @@ Activité
 6. contravention =ព្រមាន=
 7. visionnage  =ទស្សនា=
 8. communication
+9. 
+10. 
+
+* Leçon 3: Voyelles composées
+** Séance 27: im-in-il-imm-inn-ill
+
+| in  | អាំង  |
+|-----+------|
+| inn | អ៊ីននឹះ |
+| im  | អាំ   |
+| imm | អ៊ីមមឹះ |
+| il  | អ៊ីល   |
+| ill | អ៊ីលលឹះ |
+|     | អ៊ីយយឺះ |
+
+Activité 10:
+| l'internet    | /in-ter-net/ |
+| l'innovation  | =របបគំហើញ=    |
+| immigration   | =អន្តោប្រវេសន៍= |
+| la famille    | =fa-mi-ye=   |
+| imprimant     | =printer=    |
+| un état-civil | =លិខិតអាពា=    |
+|               |              |
+
+Activité 11:
+1. immobile  =អចលនៈ=
+2. innocente =មនុស្សស្អាតស្អំ=
+3. brésil    =afric latin=
+4. incendie  =អគ្គីភ័យ=
+5. mille     =thousand=
+6. important
+
+
+Activité 12:
+1. intéressante  =interesting=
+2. impossibilité
+3. outil
+4. innommé
+5. immortelle
+6. illustration
+	 
+** Séance 28
+
+| a  | អា        |
+| ar | អារឹះ      |
+| e  | អឺ         |
+| er | អេ - អែរឹះ |
+| i  | អ៊ី         |
+| ir | អ៊ារឹះ      |
+| o  | អូ         |
+| or | អរឹះ       |
+| u  | អ៊ុយ        |
+| ur | អៀរឹះ      |
+|    |           |
+
+| la mine         | =bomb=         |
+| une assurance   |                |
+| le cheminée     |                |
+| le carbone      |                |
+| en cuir         | /kv-ir/ =ស្បែក= |
+| l'acide         |                |
+| le domino       |                |
+| les efforts     | =ខំប្រឹង=         |
+| la tortue       |                |
+| merci           |                |
+|-----------------+----------------|
+|                 |                |
+|-----------------+----------------|
+| architecture    |                |
+| ministre        |                |
+| orientation     | =ការតម្រង់ទឹស=    |
+| irrégularité    | =មិនទៀងទាត់=     |
+| humoriste       | =joker=        |
+| appartement     | =ផ្ទះល្វែង=      |
+| confortablement |                |
+| hébergement     | =កន្លែងស្នាក់នៅ=  |
+| urbanisation    | =ធ្វើឱ្យទៅជាក្រុង= |
+| maintenant      | =now=          |
+|                 |                |
+
+Activité 14:
+1. une armoire en bois
+2. la ceinture un cuir /sin-ture/
+3. la miroir de Tévi /មៀរឹះ រ័/
+4. l'usine de recyclage  /u-zin/
+5. les jeux olympiques
+6. l'eau minérale
+7. décorer la maison
+8. acheter un stylo =buy=
+9. le citron du Vietnam =lemon=
+10. verser de la biére =vase=
+
+Activité 15:
+1. Architecture
+2. minitre
+3. orientation
+4. irrégularité
+5. humoriste
+6. appartement
+7. confortablement
+8. hébergement
+9. urbanisation
+10. maintenant
+
+** séance 29
+
+1. la tour eiffel
+2. coeur/ cœeur
+3. loup /wolf/
+4. boeuf /bull/
+5. point
+6. croix /cross/
+
+åæ øÆ ø æ å o
+Ø æ º
+
+- les bijoux de ma maman  =jewery=
+- le poisson dans l'eau =fish in the water=
+- la soeur de Bora  /Bora's sister/
+- les oeuvres de M. Sivmeng =artwork=
+- J'aime le Singapour.
+- Il a le nez pointu =sharp=
+- le nez  =nose=
+
+Activité 18
+
+1. lointaine /loin-taine/
+2. savoir =know=
+3. désoeuvrement =free, not work=
+4. nourriture =food=
+5. couverture =cover, blanket=
+6. écoeurement  ==
+
+** séance 30
+** séance 31
+
+| é  | អេ |                |
+| ez |    |                |
+|----+----+----------------|
+| è  | អ៊ែ | accent grave   |
+| ê  |    | ceak kung flex |
+| ei | អែ |                |
+| et |    |                |
+|    |    |                |
+
+
+Activité 22 [e], []
+
+1. le peigne pour se préparer =comb=
+2. travailler chez-moi =work at my house=
+3. la jolie tête =head=
+4. la chèvre de la campagne =goat=
+5. l'armé de la Défense Nationale =army=
+6. le livret scholaire de 2021 =book=
+
+Activité 23
+
+1. mère =mother=
+2. filet =net=
+3. crêpe =cake=
+4. bébé  =baby=
+5. nez   =nose=
+6. seine =a river in paris=
+
+lkajsdf
+1. La mère de Tévi.
+2. la crépe pour le dîner.
+3. la bébé de monsieur Vuthy.
+4. mon papa a le grand nez.
+5. J'achète un filet de volleyball.
+6. je visite la Seine de Paris.
+
+Activité 24
+
+1. électoral  =vote=
+2. rez-de-chaussée
+3. problémes
+4. moi-même   =myself=
+5. enseignement =teaching=
+6. gobelet =plastic glass=
+
+** séance 32
+
+| eu   | អឺ   |
+| eau  | អូ   |
+| eur  | អើរៈ |
+| ein  | អាំង |
+| eil  | អីយៈ |
+| euil | អឺយ  |
+|      |     |
+
+Activité 25
+1. éteindre =turn off=
+2. douleur =hurt=
+3. cheveux  =hair=
+4. forteuil =armchair=
+5. corbeau =crow=
+6. soleil =sun=
+
+Acti 26
+1. peintre  =painter=
+2. réveil =alarm clock=
+3. danseurs =dancer=
+4. feuilles de papier =leave=
+5. fleuve =river=
+6. jumeau
+
+Acti 27
+
+1. Aérofrein
+2. conseiller  =give advise=
+3. dangereusement =dangerously=
+4. envahisseur =invader=
+5. feuilleter =sheet by sheet (fast)=
+6. réseau internet =internet network=
+** séance 33
+| eb | អ៊ែប            |
+| ep | អ៊ែព            |
+| ec | អែក            |
+| ef | អែហ្វ           |
+| el | អែល            |
+| es | អែ - អែស       |
+| ex | អែកសឹះ - អែកហ្សឹះ |
+
+Activité 28
+1. poubelle =recycle bin=
+2. inflexion  =ការបន្ទន់ឥរិយាបទ=
+3. réception  =បដិសណ្ឋារកិច្ច=
+4. spectateurs  =អ្នកទស្សនិកជន=
+5. chef
+6. vieillesse =old age=
+
+Activté 29
+1. effacer  =errase=
+2. escargot =snail=
+3. exposition =តាំងពិពរណ៍=
+4. insectes  =insect=
+5. jumelles =កែវយឹត= 
+6. accepter =យល់ព្រម=
+
+Activité 30
+1. messagerie
+2. hebdomadairement  =weekly magazine=
+3. actuellement   =nowaday=
+4. extraordinare
+5. électricité
+6. efficacité  =efficient=
+
+** séance 34
+
+Activité 34
+1. calcium
+2. réunion =meeting=
+3. cuisinier =to cook=
+4. viande =meat=
+5. pont aérien =ស្ពានអាកាស=
+6. frontière =border=
+7. cambodgienne =Cambodian girl=
+
+Activité 35
+1. la musicienne très connue du Cambodge
+2. la couturière dans l'usine chinoise
+3. l'aquarium pour mettre des poissons
+4. Sivmeng va au cinéma avec sa fiancée
+5. J'ai peur des scorpion
+
+Activité 36
+1. trianulaire
+2. financièrement
+3. mondialisation
+4. uranium
+5. quotidiennemnt
+
+** séance
+
+| ay | អែអ៊ី, អែយឹះ |
+| ey | អីយឹះ       |
+| oy | អ័យយឹះ      |
+|    |           |
+
+Activité 37
+1. voyou =gangster, thug=
+2. rayon =ray=
+3. nettoyer =to clean=
+4. caseyeur =fishing ship=
+5. payet  =to pay=
+6. mareyeur =fishmonger=
+
+Activité 38
+1. volleyball
+2. voyante =clairvoyant=
+3. balayer =to sweep up=
+4. fileyeur
+5. paysage =ទេសភាព=
+6. se noyer =លង់ទឹក, to drown=
+
+Activité 39
+1. pays asiatiques =country in asia=
+2. asseyez-vous =sit down please=
+3. moyen de transport
+4. essayage
+5. hockeyeur
+6. croyance
+
+** séance 37
+
+Activité (7)
+1. une ampoule
+2. une antenne
+3. la grammaire
+4. l'anniversaire
+5. le programme
+6. une annonce
+7. l'ampère
+8. l'antropomor
+
+Activité (7) <---
+1. une lycéene
+2. un encyclopédie
+3. une employée
+4. un gemmologue
+5. prudemment *
+6. l'embouteillage
+7. anceinte
+8. une coréenne
+
+Activité  (8)
+1. randonnées
+2. colombie
+3. saison
+4. commode
+5. gonfler
+6. commissariat
+7. stationner
+8. compétition
+
+
+Activité: Indentifier le son des voyelles composées. (6)
+1. immobile ->      b
+2. une innocente -> e
+3. Brésil           d
+4. l'incendie       a
+5. un mille         c
+6. important        f
+
+
+correspond au dessin 
+| immobile   | B |
+| innocente  | E |
+| Brésil     | D |
+| l'incendie | A |
+| un mille   | C |
+| important  | F |
+
+
+
+
+** séance
+
+
+1. l'araignée est sur le mur?      (D)
+2. dans le fleuve, il y a des poissons.  (E)
+3. tu aimes jouer de la guitare?   (A)
+4. ma soeur met sa robe pour aller au mariage. (B)
+5. Bora prend - le crayon pour écrire.   (C)
+
+
+Activité :
+1. Le chat table.
+2. dans la tous, il y a des stylo et de 
+3. le weekend, j aim jouer au football avec mai amis de village
+4. ton papa, mai   la moi ?
+5. mama mon, achète de le gume au de supermache?
+
+lkajdf
+1. Le chat est sur la table?
+2. Dans la trousse, il y a des stylos et des régles.
+3. Le week-end, j'aime jouer au football avec mes amis du village.
+4. Ton papa met ses vêtement dans l'armoire?
+5. Ma maman achète des légumes et des fruits au supermarché.
+
+Activité 3
+1. Dans la maison, il y a un salon, une cuisine et duex chambres.
+2. Ta cousine vend des fruits au marché Central?
+3. Mon copain a des cheveux longs et bruns.
+4. Le policier travaille dans le commisariat.
+5. Tu aimes manger des pastèque et des pommes?
+
+| copain | =boyfriend= |
+|        |             |
